tests/compile_fail/ktstr_test_cleanup_budget_ms_zero.stderr
error: cleanup_budget_ms must be > 0 — a zero budget would reject every successful run (any measurable cleanup duration overshoots zero). Omit the attribute to disable the check.
 --> tests/compile_fail/ktstr_test_cleanup_budget_ms_zero.rs:3:1
  |
3 | #[ktstr_test(cleanup_budget_ms = 0)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ktstr_test` (in Nightly builds, run with -Z macro-backtrace for more info)
